dataset1235/2025-2/1955397009/users/2738682282/executions/2304143742_1492666623.log
== SUBMISSION (2025-09-02 13:11:25)
-- CODE: 
suco = int(input("Digite a quantidade de sucos: "))
salgado = int(input("Digite a quantidade de salgados: ")) 
valor = float(input("Digite o valor disponível: "))

valor_suco = suco * 3
valor_salgado = salgado * 3.50

total = valor_suco + valor_salgado

if total > valor:
  print(round(total, 2))
  print("Nao")
else: 
  print(round(total, 2))
  print("Sim")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
Nao
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
Sim
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
Sim
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
Nao
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
Nao
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:10:14)
-- CODE: 
suco = int(input("Digite a quantidade de sucos: "))
salgado = int(input("Digite a quantidade de salgados: ")) 
valor = float(input("Digite o valor disponível: "))

valor_suco = suco * 3
valor_salgado = salg * 3.50

total = valor_suco + valor_salgado

if total > valor:
  print(round(total, 2))
  print("Sim")
else: 
  print(round(total, 2))
  print("Nao")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_salgado = salg * 3.50
                    ^^^^
NameError: name 'salg' is not defined
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_salgado = salg * 3.50
                    ^^^^
NameError: name 'salg' is not defined
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_salgado = salg * 3.50
                    ^^^^
NameError: name 'salg' is not defined
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_salgado = salg * 3.50
                    ^^^^
NameError: name 'salg' is not defined
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_salgado = salg * 3.50
                    ^^^^
NameError: name 'salg' is not defined
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    valor_salgado = salg * 3.50
                    ^^^^
NameError: name 'salg' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:10:44)
-- CODE: 
suco = int(input("Digite a quantidade de sucos: "))
salgado = int(input("Digite a quantidade de salgados: ")) 
valor = float(input("Digite o valor disponível: "))

valor_suco = suco * 3
valor_salgado = salgado * 3.50

total = valor_suco + valor_salgado

if total > valor:
  print(round(total, 2))
  print("Sim")
else: 
  print(round(total, 2))
  print("Nao")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
Sim
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
Nao
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
Nao
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
Sim
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
Sim
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
